Handle errors and warnings, implement early SEO

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,17 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="keywords"
+      content="software,engineering,intern,developer,web,development,university,waterloo,computer,science,machine,learning,Michael,Vytlingam,front,end,back,engineer"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta
+      name="robots"
+      content="index,follow"
+    />
+    <meta
+      name="description"
+      content="I like to build beautiful things for wonderful people. I’m currently looking for internships for the Summer/Fall 2020 seasons."
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
