--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="keywords"
-      content="software,engineering,intern,developer,web,development,university,waterloo,computer,science,machine,learning,Michael,Vytlingam,front,end,back,engineer"
-    />
-    <meta
-      name="robots"
-      content="index,follow"
-    />
-    <meta
-      name="description"
-      content="I like to build beautiful things for wonderful people. I’m currently looking for internships for the Summer/Fall 2020 seasons."
-    />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <meta name="theme-color" content="#000000" />
+  <meta name="keywords"
+    content="software,engineering,intern,developer,web,development,university,waterloo,computer,science,machine,learning,Michael,Vytlingam,front,end,back,engineer" />
+  <meta name="robots" content="index,follow" />
+  <meta name="description"
+    content="I like to build beautiful things for wonderful people. I’m currently looking for internships for the Summer 2021 season." />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -33,12 +27,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Michael Vytlingam | Software Engineer</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Michael Vytlingam | Software Engineer</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -48,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
