--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     content="software,engineering,intern,developer,web,development,university,waterloo,computer,science,machine,learning,Michael,Vytlingam,front,end,back,engineer" />
   <meta name="robots" content="index,follow" />
   <meta name="description"
-    content="I like to build beautiful things for wonderful people. I’m currently looking for internships for the Fall 2021 and/or Winter 2022 season." />
+    content="I like to build beautiful things for wonderful people. I’m currently looking for new-grad opportunities for the Summer 2022 season." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
